# rustic-crystal

./: .gitignore  AppIcon.icns  Cargo.toml  readme.md
src/: cpu.rs  gpu.rs  keypad.rs  lib.rs  main.rs  mbc3.rs  mmu.rs  register.rs  rom.rs  saves.rs  serial.rs  sound.rs  sound2.rs  timer.rs
src/game/: mod.rs
src/game/audio/: cry_pointers.rs  engine.rs  mod.rs  music.rs  sfx.rs
src/game/constants/: battle_constants.rs  battle_tower_constants.rs  engine_flags.rs  gfx_constants.rs  hardware_constants.rs  input_constants.rs  item_constants.rs  item_data_constants.rs  landmark_constants.rs  map_constants.rs  mart_constants.rs  menu_constants.rs  misc_constants.rs  mod.rs  move_constants.rs  move_effect_constants.rs  pokemon_constants.rs  pokemon_data_constants.rs  radio_constants.rs  ram_constants.rs  scgb_constants.rs  serial_constants.rs  text_constants.rs  trainer_constants.rs  type_constants.rs
src/game/data/: default_options.rs  mod.rs
src/game/data/items/: bargain_shop.rs  marts.rs  marts_legacy.rs  mod.rs  rooftop_sale.rs
src/game/data/moves/: mod.rs  moves.rs  names.rs  tmhm_moves.rs
src/game/data/pokemon/: base_stats.rs  egg_moves.rs  evos_attacks.rs  evos_attacks_legacy.rs  mod.rs
src/game/data/radio/: mod.rs  oaks_pkmn_talk_routes.rs
src/game/data/trainers/: mod.rs  parties.rs  parties_legacy.rs
src/game/data/wild/: flee_mons.rs  johto_grass.rs  johto_grass_legacy.rs  johto_water.rs  johto_water_legacy.rs  kanto_grass.rs  kanto_grass_legacy.rs  kanto_water.rs  mod.rs  probabilities.rs  swarm_grass.rs  swarm_water.rs
src/game/engine/: mod.rs
src/game/engine/battle/: core.rs  mod.rs  read_trainer_party.rs
src/game/engine/items/: item_effects.rs  mart.rs  mod.rs  tmhm.rs
src/game/engine/link/: link.rs  mod.rs
src/game/engine/menus/: intro_menu.rs  main_menu.rs  mod.rs  save.rs
src/game/engine/overworld/: mod.rs  wildmons.rs
src/game/engine/pokegear/: radio.rs
src/game/engine/pokemon/: mod.rs  (+7 more)
src/game/home/: audio.rs  init.rs  mod.rs
src/game/macros/: asserts.rs  coords.rs  data.rs  enum.rs  farcall.rs  mod.rs  predef.rs
src/game/ram/: hram.rs  mod.rs  sram.rs  vram.rs  wram.rs
src/game_state/: battle_mon.rs  box_mon.rs  mod.rs  mon_list.rs  moveset.rs  party_mon.rs
src/save_state/: box.rs  determinant_values.rs  mod.rs  string.rs
